# Clawdometer

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: release.yml
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: audio.rs  main.rs  ui_prefs.rs  updater.rs  usage_poller.rs  usage_refresher.rs  watcher.rs
app/ui/: bento.js  clawd.js  index.html  main.js  orb.js  style.css  usage-color.js
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  hook.rs  main.rs
crates/cli/tests/: cli_commands_test.rs  e2e_test.rs  hook_test.rs  install_cli_test.rs
crates/core/: Cargo.toml
crates/core/src/: hook.rs  lib.rs  paths.rs  schema.rs  settings.rs  state.rs
crates/core/tests/: schema_test.rs  settings_install_test.rs  settings_restore_test.rs  settings_uninstall_test.rs  settings_wrap_test.rs  state_test.rs
crates/core/tests/fixtures/: stdin-pre-response.json  stdin-with-limits.json
docs/: acceptance-v1.md
docs/mockups/: audio-orb-led-bloom.html  audio-orb-led-usage-zones.html  audio-orb-peakhold.html  audio-orb-skins-25.html  audio-orb-spectrum.html  audio-orb-variants.html  audio-reactive-visualizer-STATE.md  audio-reactive-visualizer.html  audiowave-100.html  bento-bars-hud.html  clawd-arm-length.html  clawd-only.html  clawd-size-scan.html  clawd-skins-orange.html  clawd-working-anim.html  concepts-100.html  concepts-gallery.html  fable-bar-concepts.html  fable-bar-tasteskill.html  fable-bar-uiuxpromax.html  handheld-mono.html  handheld-variants.html  icon-concepts.html  icon-final.html  icon-scale.html  landing-page-mockup.html  orange-outline.html  orb-center-pulse-reset-arc.html  orb-glow-bloom.html  orb-idle-breathing.html  orb-led-band-balance.html  orb-peak-spark.html  orb-region-dividers.html  skin-tweaks.html  u8-trim.html  widget-300.html
docs/superpowers/plans/: 2026-07-12-clawdometer-v1.md
docs/superpowers/specs/: 2026-07-12-clawdometer-design.md
