[package]
name = "clawdometer-app"
version = "0.2.1"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
clawdometer-core = { path = "../../crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "local-offset", "parsing"] }
wait-timeout = "0.2"

[dev-dependencies]
