[package]
name = "clawdometer-app"
version = "0.5.10"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
clawdometer-core = { path = "../../crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "local-offset", "parsing"] }
wait-timeout = "0.2"
# Audiowave Orb rice skin: FFT of the WASAPI loopback capture. rustfft is
# cross-platform; the capture (wasapi) is Windows-only, below.
rustfft = "6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
] }
# System-audio loopback capture for the Audiowave Orb skin. Purpose-built
# WASAPI bindings with a canonical loopback example; cpal's Windows capture
# callback has known breakage (RustAudio/cpal#516).
wasapi = "0.23"

[dev-dependencies]
