[package]
name = "clawdometer-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "clawdometer"
path = "src/main.rs"

[dependencies]
clawdometer-core = { path = "../core" }
serde_json = "1"
wait-timeout = "0.2"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tempfile = "3"
